--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
+    "clean-css": ">=4.1.11",
     "css-loader": "^2.1.1",
     "extract-loader": "^3.1.0",
     "file-loader": "^4.0.0",
@@ -58,7 +59,8 @@
     "sass-loader": "^7.1.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^2.11.5"
+    "webpack-dev-server": ">=3.1.11",
+    "lodash": ">=4.17.11"
   },
   "repository": {
     "type": "git",
